feat: about-worth section mobile version

--- a/src/scss/sections/_about-mission.scss
+++ b/src/scss/sections/_about-mission.scss
@@ -1,6 +1,10 @@
 .mission {
     margin-bottom: 26rem;
 
+    @include small-tablet{
+        margin-bottom: 20rem;
+    }
+
     &__content {
         position: relative;
 
